--- a/app/src/main/res/layout/event_item.xml
+++ b/app/src/main/res/layout/event_item.xml
@@ -7,13 +7,15 @@
     <TextView
         android:id="@+id/titleTextView"
         android:textSize="18sp"
-        android:textStyle="bold"/>
+        android:textStyle="bold" android:layout_height="120dp" android:layout_width="60dp"/>
 
     <TextView
         android:id="@+id/categoryTextView"
-        android:textSize="14sp"/>
+        android:layout_width="60dp"
+        android:layout_height="120dp"
+        android:textSize="14sp" />
 
     <TextView
         android:id="@+id/dateTextView"
-        android:textSize="14sp"/>
+        android:textSize="14sp" android:layout_height="120dp" android:layout_width="60dp"/>
 </LinearLayout>
