--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,34 +1,19 @@
-<?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    tools:context=".MainActivity">
-
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
+    android:gravity="center"
     android:padding="16dp">
 
-    <TextView
+    <Button
+        android:id="@+id/buttonInterests"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Добро пожаловать в Календарь студенческих мероприятий"
-        android:textSize="24sp"
-        android:textStyle="bold" />
+        android:text="Выбор интересов" />
 
     <Button
-        android:id="@+id/selectInterestsButton"
-        android:layout_width="match_parent"
+        android:id="@+id/buttonEvents"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Выбрать интересы" />
-
-    <Button
-        android:id="@+id/viewEventsButton"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:text="Просмотреть мероприятия" />
+        android:text="Список мероприятий" />
 </LinearLayout>
-</androidx.constraintlayout.widget.ConstraintLayout>
