--- a/app/src/main/res/layout/activity_interest_selection.xml
+++ b/app/src/main/res/layout/activity_interest_selection.xml
@@ -1,3 +1,4 @@
+<?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
@@ -6,14 +7,20 @@
     android:padding="16dp">
 
     <Button
-        android:id="@+id/buttonInterests"
-        android:layout_width="188dp"
+        android:id="@+id/buttonScience"
+        android:layout_width="107dp"
         android:layout_height="wrap_content"
-        android:text="Выбор интересов" />
+        android:text="Наука" />
 
     <Button
-        android:id="@+id/buttonEvents"
+        android:id="@+id/buttonSport"
+        android:layout_width="106dp"
+        android:layout_height="wrap_content"
+        android:text="Спорт" />
+
+    <Button
+        android:id="@+id/buttonArt"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Список мероприятий" />
+        android:text="Искусство" />
 </LinearLayout>
